--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Ribin"
     />
+    <meta name="google-site-verification" content="rQTgLHsOQixQrStTGsJ8YSLtgCI6W5WqaCeMPDwObbA" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
